--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -7,6 +7,7 @@
     include_once dirname(__DIR__).'../../../resources/GSuiteAPI.php';
     include_once dirname(__DIR__).'../../../resources/StripeAPI.php';
 
+    #TODO: get email from currently logged in wp user
     $email = 'apb@decaturmakers.org';
     $user = getUser($email);
     $sub_mgmt = $user->getCustomSchemas()['Subscription_Management'];
@@ -42,7 +43,7 @@
       <div ng-app="memberProfile" ng-controller="DemoCtrl">
 
        <div class="mas-title">
-           Welcome, <?php echo $user->getName()->getFullName(); ?> !
+           Welcome, <?php echo $user->getName()->getFullName(); ?>!
        </div>
 
        <div layout="row" layout-sm="column">
@@ -101,8 +102,8 @@
              <md-content layout-padding>
                 <form name="paymentInformation">
                    <md-input-container class="md-block">
-                      <label>Last 4 Digits</label>
-                      <input required type="card" name="cardNum" ng-model="project.cardNum" value="<?php echo $card->last4;?>" disabled/>
+                      <label>Last 4 Digits: <?php echo $card->last4; ?></label>
+                      <input required type="card" name="cardNum" ng-model="project.cardNum" disabled/>
                    </md-input-container>
                    <md-input-container class="md-block">
                       <label>Expiration Date: <?php echo $card->exp_month."/".$card->exp_year; ?></label>
