UI -- contains bootstrapped pages and new member view view  (#83)
* new member view page added to the front end

* Bootstrap integrations page

* Fix background color on updated integrations page

* Bootstrap member table

* Center column headers

* style test

* Done with bootstrap styling for member table

* Member Edit page for makerspace memebrs complete UI

* Fixed Stripe and GSuite APIs being included more than once on integrations page

* Integrations bugfix: use admin-post.php. Also fixed indentation consistency and removed trailing whitespace

* Fix indentations and trailing whitespace

* Fixed style. Removed extra html and body tags

* Remove extra body tag, add footer and sidebar

* remove sidebar

* Add back body tag

* change body tag to div

* test php change

* Testing proper method for enqueueing styles and scripts

* Bugfixes

* Bugfixes

* test uncomment of html

* Add Stripe integration to member page

* bugfix

* add card brand

* Remove card update from admin page

--- a/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
+++ b/front-end-pages/admin-pages/integrations-tab/admin-integrations.html
@@ -1,57 +1,66 @@
 <?php
 
-// Preventing loading direct from browser
-defined( 'ABSPATH' ) or die();
+    // Preventing loading direct from browser
+    defined( 'ABSPATH' ) or die();
 
-echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-integrations.css', __FILE__ ) . '">' . "\n";
+    echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-integrations.css', __FILE__ ) . '">' . "\n";
 
-include_once __DIR__ . '/../../resources/GSuiteAPI.php';
-include_once __DIR__ . '/../../resources/StripeAPI.php';
-
+    include_once __DIR__ . '/../../resources/GSuiteAPI.php';
+    include_once __DIR__ . '/../../resources/StripeAPI.php';
 ?>
-	
-	<body>
 
-		<table class="mas">
-			<tr class="mas">
-                <form action="<?php echo admin_url( 'admin-post.php' ); ?>" method="post">
-				    <td class="mas">	
-					  <div id="slack">
-					  	<h1 class="mas">Stripe</h1>
-					    <label for="domain" class="mas">Stripe Public Key:</label>
-					    <input type="text" id="stripe-public" name="stripe-public" class="mas" value="<?php echo getStripePublic()?>">
-					    <br>
-					    <label for="key" class="mas">Stripe Private Key:</label>
-					    <input type="text" id="stripe-private" name="stripe-private" class="mas" value="<?php echo getStripeSecret()?>">
-					  </div>
-                    </td>
-                    <input type="hidden" name="action" value="update_keys">
+<body style="background-color: #EBEBEB">
 
-                    <td class="mas">
-                        <input id="slack-save" class="mas-save" type="submit" value="Save Changes">
-                    </td>
-                </form>
-			</tr>
+    <br>
 
-			<tr class="mas">
+    <div class="container">
+        <table class="table table-striped table-bordered">
+            <tr>
                 <form action="<?php echo admin_url( 'admin-post.php') ?>" method="post">
-                    <td class="mas">
-                        <div id="G Suite">
-                            <h1 class="mas">GSuite for Non-Profits</h1>
-                            <label for="gsuite-json" class="mas">GSuite Access JSON:</label>
-                            <textarea rows="10" cols="60" id="gsuite-json" name="gsuite-json" class="mas"><?php echo  getGSuiteCredentials() ?></textarea>
+                    <td>
+                        <h3>Slack</h3>
+                    </td>
+
+                    <td>
+                        <div id="slack">
+                            <label for="stripe-public">Stripe Public Key:</label>
+                            <input type="text" id="stripe-public" name="stripe-public" value="<?php echo getStripePublic()?>">
+
+                            <br><br>
+
+                            <label for="stripe-private">Stripe Private Key:</label>
+                            <input type="text" id="stripe-private" name="stripe-private" value="<?php echo getStripeSecret()?>">
                         </div>
                     </td>
+
                     <input type="hidden" name="action" value="update_keys">
 
-                    <td class="mas">
-                        <input id="gsuite-save" class="mas-save" type="submit" value="Save Changes">
+                    <td style="text-align: center">
+                        <button class="btn mas-save">Save Changes</button>
                     </td>
                 </form>
-			</tr>
-		</table>
-	</body>
+            </tr>
 
-</html>
+            <tr>
+                <form action="<?php echo admin_url( 'admin-post.php') ?>" method="post">
+                    <td>
+                        <h3>GSuite</h3>
+                    </td>
 
-<!-- How to populate this? Is there a list of integrations somewhere? I dunno... -->
+                    <td>
+                        <div id="gsuite">
+                            <label for="gsuite-json">GSuite Access JSON:</label>
+                            <textarea id="gsuite-json" name="gsuite-json" rows="10" cols="60"><?php echo getGSuiteCredentials() ?></textarea>
+                        </div>
+                    </td>
+
+                    <input type="hidden" name="action" value="update_keys">
+
+                    <td style="text-align: center">
+                        <button class="btn mas-save">Save Changes</button>
+                    </td>
+                </form>
+            </tr>
+        </table>
+    </div>
+</body>
