--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -1,3 +1,9 @@
+<?php
+$admin = 'thomascoe1@gmail.com';
+$subject = 'DecaturMakers New User';
+$message = 'Congratulations! A new user has registered with the Decatur Makerspace. Please submit a background check for user $firstname $lastname.';
+wp_mail($admin, $subject, $message);
+?>
         <br>
         
         <h3>Register as Member</h3>
