echo return value

--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -2,7 +2,9 @@
 $admin = 'thomascoe1@gmail.com';
 $subject = 'DecaturMakers New User';
 $message = 'Congratulations! A new user has registered with the Decatur Makerspace. Please submit a background check for user $firstname $lastname.';
-wp_mail($admin, $subject, $message);
+
+$return = wp_mail($admin, $subject, $message);
+echo $return;
 ?>
         <br>
         
