--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -1,4 +1,9 @@
         <br>
+
+        <!-- Overriding the Bootstrap CSS for background color -->
+        <script>
+            $('body').css('background-color', '#f2f2f2');
+        </script>
         
         <h3>Register as Member</h3>
 
