--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -2,7 +2,7 @@
 
         <!-- Overriding the Bootstrap CSS for background color -->
         <script>
-            $('body').css('background-color', '#f2f2f2');
+            jQuery('body').css('background-color', '#f2f2f2');
         </script>
         
         <h3>Register as Member</h3>
