--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -1,13 +1,5 @@
         <br>
 
-<<<<<<< HEAD
-        <!-- Overriding the Bootstrap CSS for background color -->
-        <script>
-            jQuery('body').css('background-color', '#f2f2f2');
-        </script>
-        
-=======
->>>>>>> d9f3c957f02f880f848dde65669edff4b8eb58aa
         <h3>Register as Member</h3>
 
         <div class="container">
@@ -35,7 +27,15 @@
                             @decaturmakers.org
                         </div>
 
+                        <div class="form-group">
+                            <label for="password" class="control-label" >Password:</label>
+                            <input type="password" style="display: inline;" class="form-control" id="password" name="password" placeholder="">
+                        </div>
 
+                        <div class="form-group">
+                            <label for="password-match" class="control-label" >Confirm Password:</label>
+                            <input type="password" style="display: inline;" class="form-control" id="password-match" name="password-match" placeholder="">
+                        </div>
 
                         <div class="form-group">
                             <label for="type" class="control-label" >Membership type:</label>
