--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -1,66 +1,71 @@
-        <br>
+<script type="text/javascript" src="registration-form.js"></script>
 
-        <h3>Register as Member</h3>
+<br>
 
-        <div class="container">
-            <div class="row">
-                <form action="?action=review" method="POST" class="form-horizonal">
-                    <div class="col-sm-4">
-                        <div class="form-group">
-                            <label for="first" class="control-label">First Name:</label>
-                            <input type="text" class="form-control" id="first" name="firstname" placeholder="">
-                        </div>
+<h3>Register as Member</h3>
 
-                        <div class="form-group">
-                            <label for="last" class="control-label">Last Name:</label>
-                            <input type="text" class="form-control" id="last" name="lastname" placeholder="">
-                        </div>
+<div class="container">
+    <div class="row">
+        <form action="?action=review" method="POST" class="form-horizonal">
+            <div class="col-sm-4">
+                <div class="form-group">
+                    <label for="first" class="control-label">First Name:</label>
+                    <input type="text" class="form-control" id="first" name="firstname" placeholder="">
+                </div>
 
-                        <div class="form-group">
-                            <label for="email" class="control-label">Email:</label>
-                            <input type="email" class="form-control" id="email" name="email" placeholder="">
-                        </div>
+                <div class="form-group">
+                    <label for="last" class="control-label">Last Name:</label>
+                    <input type="text" class="form-control" id="last" name="lastname" placeholder="">
+                </div>
 
-                        <div class="form-group">
-                            <label for="username" class="control-label" >Username:</label>
-                            <input type="text" style="display: inline;" class="form-control" id="username" name="username" placeholder="">
-                            @decaturmakers.org
-                        </div>
+                <div class="form-group">
+                    <label for="email" class="control-label">Email:</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="">
+                </div>
 
-                        <div class="form-group">
-                            <label for="password" class="control-label" >Password:</label>
-                            <input type="password" style="display: inline;" class="form-control" id="password" name="password" placeholder="">
-                        </div>
+                <div class="form-group">
+                    <label for="username" class="control-label" >Username:</label>
+                    <input type="text" style="display: inline;" class="form-control" id="username" name="username" placeholder="">
+                    @decaturmakers.org
+                </div>
 
-                        <div class="form-group">
-                            <label for="password-match" class="control-label" >Confirm Password:</label>
-                            <input type="password" style="display: inline;" class="form-control" id="password-match" name="password-match" placeholder="">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="type" class="control-label" >Membership type:</label>
-                                <select class="form-control" name="type" id="type">
-                                    <option value="basic-ind">Individual Basic ($25/mo)</option>
-                                    <option value="support-ind">Individual Supporter ($40/mo)</option>
-                                    <option value="basic-fam">Family Basic ($50/mo)</option>
-                                    <option value="support-fam">Family Supporter ($75/mo)</option>
-                                    <option value="invalid">Invalid</option>
-                                </select>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="checkbox">
-                                <label><input type="checkbox" name="autorenew" checked> Auto-renew Membership</label>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                        </div>
+                <div class="form-group">
+                    <label for="password" class="control-label" >Password:</label>
+                    <input type="password" style="display: inline;" class="form-control" id="password" name="password" placeholder="" ng-model="pw" required>
+                    <div ng-messages="pw.$error">
+                         <div ng-message="required">This field is required.</div>
                     </div>
-                </form>
+                </div>
+
+                <div class="form-group">
+                    <label for="password-match" class="control-label" >Confirm Password:</label>
+                    <input type="password" style="display: inline;" class="form-control" id="password-match" name="password-match" placeholder="" ng-model="pw-match" ng-class="{aria-describedby='inputSuccess3Status': pw==pw-match}">
+                </div>
+
+                <div class="form-group">
+                    <label for="type" class="control-label" >Membership type:</label>
+                        <select class="form-control" name="type" id="type">
+                            <option value="basic-ind">Individual Basic ($25/mo)</option>
+                            <option value="support-ind">Individual Supporter ($40/mo)</option>
+                            <option value="basic-fam">Family Basic ($50/mo)</option>
+                            <option value="support-fam">Family Supporter ($75/mo)</option>
+                            <option value="invalid">Invalid</option>
+                        </select>
+                </div>
+
+                <div class="form-group">
+                    <div class="checkbox">
+                        <label><input type="checkbox" name="autorenew" checked> Auto-renew Membership</label>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
             </div>
-        </div>
+        </form>
+    </div>
+</div>
 
 
 
