--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="row">
-        <form action="?action=review" method="POST" class="form-horizonal">
+        <form name="register" action="?action=review" method="POST" class="form-horizonal" novalidate>
             <div class="col-sm-4">
                 <div class="form-group">
                     <label for="first" class="control-label">First Name:</label>
@@ -32,9 +32,7 @@
                 <div class="form-group">
                     <label for="password" class="control-label" >Password:</label>
                     <input type="password" style="display: inline;" class="form-control" id="password" name="password" placeholder="" ng-model="pw" required>
-                    <div ng-messages="pw.$error">
-                         <div ng-message="required">This field is required.</div>
-                    </div>
+                    <p ng-show="register.pw.$invalid && !register.pw.$pristine">This field is required.</p>
                 </div>
 
                 <div class="form-group">
