--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -1,4 +1,11 @@
-<script type="text/javascript" src="registration-form.js"></script>
+<script type="javascript">
+    angular
+        .module('registration-form')
+        .controller('registrationCtrl', function($scope){
+            $scope.pw = ""
+            $scope.pwMatch = ""
+        });
+</script>
 
 <br>
 
