--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -36,15 +36,15 @@
                     @decaturmakers.org
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" ng-class="{'has-error': registration.pw.$invalid && !registration.pw.$pristine">
                     <label for="password" class="control-label" >Password:</label>
                     <input type="password" style="display: inline;" class="form-control" id="password" name="password" placeholder="" ng-model="pw" required>
-                    <p ng-show="register.pw.$invalid && !register.pw.$pristine">This field is required.</p>
+                    <p ng-show="registration.pw.$invalid && !registration.pw.$pristine">This is a required field.</p>
                 </div>
 
                 <div class="form-group">
                     <label for="password-match" class="control-label" >Confirm Password:</label>
-                    <input type="password" style="display: inline;" class="form-control" id="password-match" name="password-match" placeholder="" ng-model="pw-match" ng-class="{aria-describedby='inputSuccess3Status': pw==pw-match}">
+                    <input type="password" style="display: inline;" class="form-control" id="password-match" name="password-match" placeholder="" ng-model="pw-match" ng-class="{aria-describedby='inputSuccess3Status': pw==pw-match}" required>
                 </div>
 
                 <div class="form-group">
