--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -1,18 +1,17 @@
 <!-- ANGULAR -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script> -->
 
 <!-- BOOTSTRAP -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
 
 
 <script language="javascript">
     angular
         .module('registration-form')
         .controller('registrationCtrl', function($scope){
-            $scope.pw = ""
-            $scope.pwMatch = ""
+
         });
 </script>
 
@@ -45,12 +44,9 @@
                     @decaturmakers.org
                 </div>
 
-                <div class="form-group" ng-class="{'has-error': registration.pw.$invalid && !registration.pw.$pristine">
+                <div class="form-group" ng-class="{'has-error': registration.password.$invalid && !registration.password.$pristine">
                     <label for="password" class="control-label" >Password:</label>
-                    <input type="pw" style="display: inline;" class="form-control" id="pw" name="pw" placeholder="" ng-model="pw" required>
-                    <p ng-show="registration.pw.$invalid && !registration.pw.$pristine">This is a required field.</p>
-                    <p>Valid = {{registration.pw.$valid}}</p>
-                    <p>Pristine = {{registration.pw.$pristine}}
+                    <input type="password" style="display: inline;" class="form-control" id="password" name="password" placeholder="" ng-model="password" required>
                 </div>
 
                 <div class="form-group">
