Forgot to specify dependencies

--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -9,7 +9,7 @@
 
 <script language="javascript">
     angular
-        .module('registrationForm')
+        .module('registrationForm', [])
         .controller('registrationCtrl', function($scope){
             $scope.password = "";
             $scope.passwordMatch = "";
