--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -52,7 +52,7 @@
 
                 <div class="form-group">
                     <label for="password-match" class="control-label" >Confirm Password:</label>
-                    <input type="password" style="display: inline;" class="form-control" id="password-match" name="password-match" placeholder="" ng-model="pw-match" ng-class="{aria-describedby='inputSuccess3Status': pw==pw-match}" required>
+                    <input type="password" style="display: inline;" class="form-control" id="passwordMatch" name="passwordMatch" placeholder="" ng-model="passwordMatch" required>
                 </div>
 
                 <div class="form-group">
