--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -41,13 +41,16 @@
 
                 <div class="form-group">
                     <label for="username" class="control-label" >Username:</label>
-                    <input type="text" style="display: inline;" class="form-control" id="username" name="username" placeholder="">
-                    @decaturmakers.org
+                    <div class="input-group">
+                        <input type="text" style="display: inline;" class="form-control" id="username" name="username" placeholder="">
+                        <div class="input-group-addon">@decaturmakers.org</div>
+                    </div>
                 </div>
 
                 <div class="form-group" ng-class="{'has-error': registration.password.$invalid && !registration.password.$pristine">
                     <label for="password" class="control-label" >Password:</label>
-                    <input type="password" style="display: inline;" class="form-control" id="password" name="password" placeholder="" ng-model="password" required>
+                    <input type="password" style="display: inline;" class="form-control" id="password" name="password" placeholder="" ng-model="password" ng-minlength="3" required>
+                    <p ng-show="registration.passowrd.$error.$minlength" class="help-block">The password you entered is too short.</p>
                 </div>
 
                 <div class="form-group">
