--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
 
-                <div class="form-group" ng-class="{'has-error': registration.password.$invalid && !registration.password.$pristine">
+                <div class="form-group" ng-class="{'has-error': !registration.password.$pristine">
                     <label for="password" class="control-label" >Password:</label>
                     <input type="password" style="display: inline;" class="form-control" id="password" name="password" placeholder="" ng-model="password" ng-minlength="3" required>
                     <p ng-show="registration.password.$error.$minlength" class="help-block">The password you entered is too short.</p>
