--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -10,7 +10,7 @@ include_once dirname(__DIR__).'../../../resources/GSuiteAPI.php';
 $user = getUser($_GET['email']);
 
 ?>
-<div class="container">
+<!-- <div class="container"> -->
     <div class="mas-title">
         <a href="admin.php?page=mas-plugin&content=1" class="mas">Members</a> >> <?php echo $user->getName()->getFullName();?>        
     </div>
@@ -50,4 +50,4 @@ $user = getUser($_GET['email']);
             </div>
         </div>
     </div>
-</div>
+<!-- </div> -->
