--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -18,38 +18,48 @@ $user = getUser($_GET['email']);
     </div>
 
     <div layout="row" layout-sm="column">
-        <div id="formContainer">
-            <form name="editMember">
-                <div class="form-group">
-                    <label for="firstName" class="control-label">First Name</label>  
-                    <input required name="firstName" class="form-control col-md-6" value="<?php echo $user->getName()->getGivenName();?>">
-                </div>
+        <table>
+            <tr>
+                <td>
+                    <div id="formContainer">
+                        <form name="editMember" class="form-horzontal">
+                            <div class="form-group">
+                                <label for="firstName" class="control-label">First Name</label>  
+                                <input required name="firstName" class="form-control col-md-6" value="<?php echo $user->getName()->getGivenName();?>">
+                            </div>
 
-                <div class="form-group">
-                    <label for="lastName" class="control-label">Last Name</label>
-                    <input required name="lastName" class="form-control col-md-6" value="<?php echo $user->getName()->getFamilyName();?>">
-                </div>
+                            <div class="form-group">
+                                <label for="lastName" class="control-label">Last Name</label>
+                                <input required name="lastName" class="form-control col-md-6" value="<?php echo $user->getName()->getFamilyName();?>">
+                            </div>
 
-                <div class="form-group">
-                    <label for="rfidNumber" class="control-label">RFID Number</label>
-                    <input required name="rfidNumber" class="form-control col-md-6">
-                </div>
+                            <div class="form-group">
+                                <label for="rfidNumber" class="control-label">RFID Number</label>
+                                <input required name="rfidNumber" class="form-control col-md-6">
+                            </div>
 
-                <div class="form-group">
-                    <label for="membershipPlan" class="control-label">Membership Plan</label>
-                    <input required name="membershipPlan" class="form-control col-md-6">
-                </div>
+                            <div class="form-group">
+                                <label for="membershipPlan" class="control-label">Membership Plan</label>
+                                <input required name="membershipPlan" class="form-control col-md-6">
+                            </div>
 
-                <button class="mas-save" type="submit">Save Changes</button>
-            </form> 
-        </div>
+                            <button class="mas-save" type="submit">Save Changes</button>
+                        </form> 
+                    </div>
+                </td>
+            </tr>
 
-        <div id="imageContainer">
-            <div style="text-align:center">
-                <?php
-                    echo '<img class="mas" src="' . plugins_url( '../../../images/female-placeholder.png', __FILE__ ) . '" id="profilePic" alt="Profile Picture">' . "\n";
-                ?>
-            </div>
-        </div>
+            <tr>
+                <td>
+                    <div id="imageContainer">
+                        <div style="text-align:center">
+                            <?php
+                                echo '<img class="mas" src="' . plugins_url( '../../../images/female-placeholder.png', __FILE__ ) . '" id="profilePic" alt="Profile Picture">' . "\n";
+                            ?>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
 <!-- </div> -->
