--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -12,53 +12,46 @@ $user = getUser($_GET['email']);
 ?>
 
 <br>
-<!-- <div class="container"> -->
     <div class="mas-title">
         <a href="admin.php?page=mas-plugin&content=1" class="mas">Members</a> >> <?php echo $user->getName()->getFullName();?>        
     </div>
 
-    <div layout="row" layout-sm="column">
-        <table>
-            <tr>
-                <td>
-                    <div id="formContainer">
-                        <form name="editMember" class="form-horizontal">
-                            <div class="form-group">
-                                <label for="firstName" class="control-label">First Name</label>  
-                                <input required name="firstName" class="form-control col-md-6" value="<?php echo $user->getName()->getGivenName();?>">
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="lastName" class="control-label">Last Name</label>
-                                <input required name="lastName" class="form-control col-md-6" value="<?php echo $user->getName()->getFamilyName();?>">
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="rfidNumber" class="control-label">RFID Number</label>
-                                <input required name="rfidNumber" class="form-control col-md-6">
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <label for="membershipPlan" class="control-label">Membership Plan</label>
-                                <input required name="membershipPlan" class="form-control col-md-6">
-                            </div>
-                            <br>
-                            <button class="mas-save" type="submit">Save Changes</button>
-                        </form> 
+    <table>
+        <tr>
+            <td>
+                <form name="editMember" class="form-horizontal">
+                    <div class="form-group">
+                        <label for="firstName" class="control-label">First Name</label>  
+                        <input required name="firstName" class="form-control" value="<?php echo $user->getName()->getGivenName();?>">
                     </div>
-                </td>
 
-                <td>
-                    <div id="imageContainer">
-                        <div style="text-align:center">
-                            <?php
-                                echo '<img class="mas" src="' . plugins_url( '../../../images/female-placeholder.png', __FILE__ ) . '" id="profilePic" alt="Profile Picture">' . "\n";
-                            ?>
-                        </div>
+                    <div class="form-group">
+                        <label for="lastName" class="control-label">Last Name</label>
+                        <input required name="lastName" class="form-control" value="<?php echo $user->getName()->getFamilyName();?>">
                     </div>
-                </td>
 
-            </tr>
-        </table>
-    </div>
-<!-- </div> -->
+                    <div class="form-group">
+                        <label for="rfidNumber" class="control-label">RFID Number</label>
+                        <input required name="rfidNumber" class="form-control">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="membershipPlan" class="control-label">Membership Plan</label>
+                        <input required name="membershipPlan" class="form-control">
+                    </div>
+                    
+                    <button class="mas-save" type="submit">Save Changes</button>
+                </form> 
+            </td>
+
+            <td>
+                <div id="imageContainer">
+                    <div style="text-align:center">
+                        <?php
+                            echo '<img class="mas" src="' . plugins_url( '../../../images/female-placeholder.png', __FILE__ ) . '" id="profilePic" alt="Profile Picture">' . "\n";
+                        ?>
+                    </div>
+                </div>
+            </td>
+        </tr>
+    </table>
