--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -17,31 +17,33 @@ $user = getUser($_GET['email']);
     <a href="admin.php?page=mas-plugin&content=1" class="mas">Members</a> >> <?php echo $user->getName()->getFullName();?>        
 </div>
 
-<form name="editMember" class="form-horizontal">
-    <div class="form-group">
-        <label for="firstName" class="control-label">First Name</label>  
-        <input required name="firstName" class="form-control" value="<?php echo $user->getName()->getGivenName();?>">
-    </div>
+<div class="form-container col-md-8">
+    <form name="editMember" class="form-horizontal">
+        <div class="form-group">
+            <label for="firstName" class="control-label">First Name</label>  
+            <input required name="firstName" class="form-control" value="<?php echo $user->getName()->getGivenName();?>">
+        </div>
 
-    <div class="form-group">
-        <label for="lastName" class="control-label">Last Name</label>
-        <input required name="lastName" class="form-control" value="<?php echo $user->getName()->getFamilyName();?>">
-    </div>
+        <div class="form-group">
+            <label for="lastName" class="control-label">Last Name</label>
+            <input required name="lastName" class="form-control" value="<?php echo $user->getName()->getFamilyName();?>">
+        </div>
 
-    <div class="form-group">
-        <label for="rfidNumber" class="control-label">RFID Number</label>
-        <input required name="rfidNumber" class="form-control">
-    </div>
+        <div class="form-group">
+            <label for="rfidNumber" class="control-label">RFID Number</label>
+            <input required name="rfidNumber" class="form-control">
+        </div>
 
-    <div class="form-group">
-        <label for="membershipPlan" class="control-label">Membership Plan</label>
-        <input required name="membershipPlan" class="form-control">
-    </div>
+        <div class="form-group">
+            <label for="membershipPlan" class="control-label">Membership Plan</label>
+            <input required name="membershipPlan" class="form-control">
+        </div>
 
-    <button class="mas-save" type="submit">Save Changes</button>
-</form> 
+        <button class="mas-save" type="submit">Save Changes</button>
+    </form>
+</div>
 
-<div id="imageContainer">
+<div id="imageContainer col-md-4">
     <div style="text-align:center">
         <?php
             echo '<img class="mas" src="' . plugins_url( '../../../images/female-placeholder.png', __FILE__ ) . '" id="profilePic" alt="Profile Picture">' . "\n";
