Update button class

--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -39,7 +39,7 @@ $user = getUser($_GET['email']);
             <input required name="membershipPlan" class="form-control">
         </div>
 
-        <button class="mas-save" type="submit">Save Changes</button>
+        <button class="mas-button" type="submit">Save Changes</button>
     </form>
 </div>
 
