Possible CSS fix

--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -40,6 +40,11 @@ $user = getUser($_GET['email']);
             <input required name="membershipPlan" class="form-control">
         </div>
 
+        <div class="form-group">
+            <label for="subscriptionExp" class="control-label">Subscription Expiration Date</label>
+            <input required name="subscriptionExp" class="form-control">
+        </div>
+
         <button class="mas-button" type="submit">Save Changes</button>
     </form>
 </div>
