--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -14,7 +14,7 @@ $user = getUser($_GET['email']);
 <br>
 
 <div class="mas-title">
-    <!-- <a href="admin.php?page=mas-plugin&content=1" class="mas">Members</a> -->
+    <a href="admin.php?page=mas-plugin&content=1" class="mas">Members</a>
     <?php echo $user->getName()->getFullName();?>        
 </div>
 
